kubernetes/flux/clusters/talos-cluster/infra/minio-operator/operator/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: operator-http
  namespace: minio-operator
spec:
  entryPoints: ["web"]
  routes:
  - match: Host(`minio-operator.homelab.emerconnelly.com`)
    kind: Rule
    middlewares:
    - name: https-redirect
      namespace: traefik
    services:
    - name: noop@internal
      kind: TraefikService
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: operator-https
  namespace: minio-operator
spec:
  entryPoints: ["websecure"]
  routes:
  - match: Host(`minio-operator.homelab.emerconnelly.com`)
    kind: Rule
    services:
    - name: console
      port: 9090
      passHostHeader: true
      sticky:
        cookie:
          name: traefik
          secure: true
          httpOnly: true
          sameSite: lax
  tls:
    secretName: operator-ingress-tls
